Build objects that will be the base of the api

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
                 <artifactId>metrics-core</artifactId>
                 <version>${metrics.version}</version>
             </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>${jersey.version}</version>
+        </dependency>
         <!--Test Dependencies-->
         <dependency>
             <groupId>junit</groupId>
