--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-xml-provider</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+<!--        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.3</version>
+        </dependency>-->
+
         <!--Test Dependencies-->
         <dependency>
             <groupId>junit</groupId>
