--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,6 @@
             <artifactId>jersey-media-json-processing</artifactId>
             <version>${jersey.version}</version>
         </dependency>
-            <dependency>
-                <groupId>io.dropwizard.metrics</groupId>
-                <artifactId>metrics-core</artifactId>
-                <version>${metrics.version}</version>
-            </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
@@ -66,6 +61,17 @@
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-xml-provider</artifactId>
             <version>2.9.3</version>
+        </dependency>
+        <!--Mertics dependencies-->
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>${metrics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-healthchecks</artifactId>
+            <version>3.1.2</version>
         </dependency>
 
         <!--Documentation dependencies-->
@@ -151,7 +157,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <excludePackageNames>com.spothero.interview.webapp</excludePackageNames>
+                    <excludePackageNames>com.spothero.interview.webapp,com.spothero.interview.service</excludePackageNames>
                 </configuration>
                 <executions>
                     <execution>
