--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,6 @@
             <artifactId>jackson-jaxrs-xml-provider</artifactId>
             <version>2.9.3</version>
         </dependency>
-        <!--Mertics dependencies-->
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
@@ -72,9 +71,10 @@
         </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
-            <artifactId>metrics-healthchecks</artifactId>
-            <version>3.1.2</version>
+            <artifactId>metrics-servlets</artifactId>
+            <version>3.2.5</version>
         </dependency>
+
 
         <!--Documentation dependencies-->
         <dependency>
